# Advent-of-Code-Rust

./: Cargo.toml
2022/: Cargo.toml
2022/src/: lib.rs
2022/src/day1/: mod.rs  part1.rs  part2.rs
2022/src/day2/: mod.rs  part1.rs  part2.rs
2022/src/day3/: mod.rs  part1.rs  part2.rs
2022/src/day7/: mod.rs  part1.rs  part2.rs
